--- a/BlazorTest/Pages/Index.razor
+++ b/BlazorTest/Pages/Index.razor
@@ -2,10 +2,8 @@
 
 <h1><span class="text-success">Sergio Tenza</span> NET <span class="text-primary">Full Stack web Developer</span></h1>
 
-Bienvenido a mi portafolio.
-
 <div class="row">
-    <div class="col text-center">
+    <div class="col text-start">
         <img class="image-fluid" src="img/Foto Sergio.png" alt="" width="35%">
     </div>
 </div>
