--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Pages/Index.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Pages/Index.razor
@@ -1,3 +1,13 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="text-center">
+                <img src="assets/logo.png" class="img-thumbnail" width="300" alt="Responsive image">
+                <h1>Welcome to</h1>
+                <h2>TNZ <small class="text-muted">Servicios Informaticos</small></h2>
+            </div>
+        </div>
+    </div>
+</div>
