CODING: Styling and new MainLayout

--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Layout/MainLayout.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Layout/MainLayout.razor
@@ -7,11 +7,16 @@
 <FluentMenuProvider /> *@
 
 <FluentLayout Style="margin-top: 10px;">    
-    @* <FluentHeader>
-        TNZ Servicios Informaticos
+    <FluentHeader>
+        <FluentPersona Style="padding: 5px;"
+            Image="assets/logo.png"
+            ImageSize="50px">
+        </FluentPersona>
         <FluentSpacer />
-        Soluciones empresariales con Blazor y dotnet
-    </FluentHeader>     *@
+        TNZ Servicios Informaticos
+        @* 
+        Soluciones empresariales con Blazor y dotnet *@
+    </FluentHeader>    
     <FluentBodyContent>
         @Body
     </FluentBodyContent>            
