--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/_Imports.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/_Imports.razor
@@ -8,4 +8,5 @@
 @using Microsoft.JSInterop
 @using SergioTenza.Blazor.Wasm.Components
 @using SergioTenza.Blazor.Wasm.Components.Pages
+@using SergioTenza.Blazor.Wasm.Components.Widgets
 @using Microsoft.FluentUI.AspNetCore.Components
