--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/wwwroot/css/app.css
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/wwwroot/css/app.css
@@ -1,3 +1,11 @@
+/*body {
+    background: linear-gradient(to bottom, #6A1B9A, #EDE7F6);*/
+    /* #6A1B9A es el morado tipo Blazor y #EDE7F6 es un tono blanco morado */
+    /*margin: 0;*/
+    /*font-family: 'Open Sans', sans-serif;*/
+/*}*/
+
+
 #blazor-error-ui {
     background: lightyellow;
     bottom: 0;
