--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/App.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/App.razor
@@ -1,21 +1,21 @@
 ﻿
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/" />
-    <link href="_content/Microsoft.FluentUI.AspNetCore.Components/css/reboot.css" rel="stylesheet" />
+    <base href="/" />    
     <link href="css/app.css" rel="stylesheet" />
     <link rel="stylesheet" href="SergioTenza.Blazor.Wasm.styles.css" />
-    <HeadOutlet />
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
+    <HeadOutlet @rendermode="InteractiveServer"/>
 </head>
 
 <body>   
-    <Routes/>
-    <script src="_framework/blazor.web.js"></script>
-    <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
+    <Routes @rendermode="InteractiveServer" />
+    <script src="_framework/blazor.web.js"></script>    
 </body>
 
 </html>
