--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Layout/MainLayout.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Layout/MainLayout.razor
@@ -1,10 +1,4 @@
-﻿@inherits FluentMainLayout
-
-@* <FluentToastProvider />
-<FluentDialogProvider />
-<FluentTooltipProvider />
-<FluentMessageBarProvider />
-<FluentMenuProvider /> *@
+﻿@inherits LayoutComponentBase
 
 <FluentLayout Style="margin-top: 10px;">    
     <FluentHeader>
@@ -16,15 +10,26 @@
         TNZ Servicios Informaticos
         @* 
         Soluciones empresariales con Blazor y dotnet *@
-    </FluentHeader>    
-    <FluentBodyContent>
-        @Body
-    </FluentBodyContent>            
+    </FluentHeader>  
+     <FluentStack Class="main" Orientation="Orientation.Horizontal" Width="100%">        
+        <FluentBodyContent Class="body-content">
+            <div class="content">
+                @Body
+            </div>
+        </FluentBodyContent>
+        <FluentDialogProvider />
+    </FluentStack>   
     <FluentFooter>
         <FluentStack Orientation="Orientation.Horizontal" VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center" Width="100%" Style=@("height: 40px; color: black; text-align: center;")>
             TNZ Servicios Informaticos &copy; 2024
         </FluentStack>
-    </FluentFooter>    
+    </FluentFooter>
 </FluentLayout>
 
-@* <main>  </main> *@
+
+<div id="blazor-error-ui">
+    An unhandled error has occurred.
+    <a href="" class="reload">Reload</a>
+    <a class="dismiss">🗙</a>
+</div>
+
