--- a/SergioTenza.Blazor.Wasm/Tests/BlazorApp1/BlazorApp1/Components/_Imports.razor
+++ b/SergioTenza.Blazor.Wasm/Tests/BlazorApp1/BlazorApp1/Components/_Imports.razor
@@ -6,10 +6,6 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using SergioTenza.Blazor.Wasm.Components
-@using SergioTenza.Blazor.Wasm.Components.Pages
-@using SergioTenza.Blazor.Wasm.Components.Widgets
-@using SergioTenza.Blazor.Wasm.Components.Dialogs
-@using Microsoft.FluentUI.AspNetCore.Components
-@using System.ComponentModel.DataAnnotations
-@using SergioTenza.Blazor.Wasm.Attributes
+@using BlazorApp1
+@using BlazorApp1.Client
+@using BlazorApp1.Components
