--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Layout/MainLayout.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Layout/MainLayout.razor
@@ -18,10 +18,12 @@
             </div>
         </FluentBodyContent>
         <FluentDialogProvider />
+        <FluentToastProvider/>
     </FluentStack>   
     <FluentFooter>
-        <FluentStack Orientation="Orientation.Horizontal" VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center" Width="100%" Style=@("height: 40px; color: black; text-align: center;")>
-            TNZ Servicios Informaticos &copy; 2024
+        
+        <FluentStack Orientation="Orientation.Vertical" VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center" Width="100%" Style=@("height: 40px; color: black; text-align: center;")>                       
+            <p>TNZ Servicios Informaticos &copy; 2024. Todos los derechos reservados.</p>
         </FluentStack>
     </FluentFooter>
 </FluentLayout>
