--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Pages/Home.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Pages/Home.razor
@@ -5,7 +5,8 @@
 <section>
     <FluentStack Orientation="Orientation.Vertical" VerticalAlignment="VerticalAlignment.Top" HorizontalAlignment="HorizontalAlignment.Center" Width="100%" Style="margin-top: 30px;height: 85vh;padding-inline: 5px;" HorizontalGap="5">
         <LandingHeader/>
-        <MoreInfo/>        
+        <MoreInfo/>  
+        <CallToAction/>
     </FluentStack>
 </section>
  
