--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Widgets/Services.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Widgets/Services.razor
@@ -4,10 +4,22 @@
         <h2>Nuestros Servicios</h2>
         <p>Ofrecemos consultoría especializada y formación en Blazor para ayudarte a alcanzar tus objetivos tecnológicos.</p>
         <FluentStack Orientation="Orientation.Horizontal" HorizontalAlignment="HorizontalAlignment.Center" VerticalAlignment="VerticalAlignment.Center" Width="100%">
-            <FluentCard Style="width: 20%;background-color: #6A1B9A; color:white;">Consultoría en Blazor</FluentCard>
-            <FluentCard Style="width: 20%;background-color: #6A1B9A; color:white;">Desarrollo de aplicaciones Blazor</FluentCard>
-            <FluentCard Style="width: 20%;background-color: #6A1B9A; color:white;">Formación y talleres especializados</FluentCard>
-            <FluentCard Style="width: 20%;background-color: #6A1B9A; color:white;">Soporte y mantenimiento</FluentCard>
+            <FluentCard Style="background-color: #6A1B9A; color:white;text-align:center;height: 15vh;">
+                <p><FluentIcon Value="@(new Icons.Regular.Size48.AppGeneric())" Color="@Color.Lightweight" /></p>
+                <p>Consultoría en Blazor</p>
+            </FluentCard>
+            <FluentCard Style="background-color: #6A1B9A; color:white;text-align:center;height: 15vh;">
+                <p><FluentIcon Value="@(new Icons.Regular.Size48.AppFolder())" Color="@Color.Lightweight" /></p>
+                <p>Desarrollo de aplicaciones Blazor</p>
+            </FluentCard>
+            <FluentCard Style="background-color: #6A1B9A; color:white;text-align:center;height: 15vh;">
+                <p><FluentIcon Value="@(new Icons.Regular.Size48.Apps())" Color="@Color.Lightweight" /></p>
+                <p>Formación y talleres especializados</p>
+            </FluentCard>
+            <FluentCard Style="background-color: #6A1B9A; color:white;text-align:center;height: 15vh;">
+                <p><FluentIcon Value="@(new Icons.Regular.Size48.Alert())" Color="@Color.Lightweight" /></p>
+                <p>Soporte y mantenimiento</p>
+            </FluentCard>
         </FluentStack>
     </FluentStack>
 </section>
