--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Pages/Home.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using home.sergeix.source.SergioTenza_github_io.SergioTenza_Blazor_Wasm.SergioTenza_Blazor_Wasm.Components.Widgets
 
 <PageTitle>Home</PageTitle>
 
