--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Dialogs/SimpleEditCatalog.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/Components/Dialogs/SimpleEditCatalog.razor
@@ -1,7 +1,7 @@
 ﻿@using System.Diagnostics.CodeAnalysis
 @using SergioTenza.Blazor.Wasm.Services
 @implements IDialogContentComponent<SimpleEditCatalog.RegisterContent>
-
+@inject MailService mailService
 
 <!-- Header -->
 <FluentDialogHeader ShowDismiss="true">
@@ -101,8 +101,7 @@
     }
 
     private async Task SaveAsync()
-    {
-        var mailService = new MailService();
+    {        
         var sended = mailService.SendMailNotification(Content.Email, Content.Comments, Content.Name, Content.Position);
         if (sended.success)
         {
